--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
