--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@tailwindcss/typography": "^0.4.1",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-scripts": "3.3.0",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
